--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">MVVMRunningApp</string>
-    <string name="google_maps_key">AIzaSyAurGJpg6vakwNV7EYA9CojYF2uOQdVsiE</string>
+    <string name="google_maps_key">Insert google api key</string>
     <string name="cancel_run">Cancel Run</string>
 
     <string-array name="filter_options">
